# nodan

./: .gitignore  README.md  debug.py  main.py  plot_cv.json  pyproject.toml  test_file.csv
.zed/: tasks.json
coordinator/: coordinator.py
core/: graph.py  node_definition.py  node_system.py  operations.py
nodan/: __init__.py  main.py
nodan/coordinator/: __init__.py  coordinator.py
nodan/core/: __init__.py  document.py  editor_tab.py  graph.py  node_system.py  operations.py  subgraph.py  type_parser.py  types.py
nodan/ui/: __init__.py  canvas.py  connection.py  main_window.py  node.py  node_edit_window.py  node_port_row.py  port.py  port_edit_row.py  subgraph_editor.py  text_edit_window.py
ui/: canvas.py  connection.py  main_window.py  node.py  node_edit_window.py  node_port_row.py  port.py  port_edit_row.py
