[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "nodan"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pyinstaller>=6.19.0",
    "pyside6>=6.11.0",
]

[project.scripts]
nodan = "nodan.main:main"

[tool.setuptools.packages.find]
include = ["nodan*"]
